--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.1",
-    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "tedious": "^16.0.0",
@@ -19,10 +18,14 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "devStart": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.22"
+  }
 }
