--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
