--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 news1=XXXXXX
 news2=XXXXXX
 
-## Indsæt API keys fra messenger på X'ernes plads og slet .template extension fra navnet så den bare hedder ".env"
+## Indsæt API keys fra messenger på X'ernes plads uden nogen citationstegn
+## og slet .template extension fra navnet så den bare hedder ".env"
