--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,11 @@
-news1=XXXXXX
-news2=XXXXXX
+DB_SERVER=XXXXXXXX.database.windows.net
+DB_USER=XXXXXXXXXX
+DB_PASSWORD=XXXXXXXXXX
+DB_NAME=XXXXXXXXXX
 
-## Indsæt API keys fra messenger på X'ernes plads uden nogen citationstegn
-## og slet .template extension fra navnet så den bare hedder ".env"
+news1=XXXXXXXX
+news2=XXXXXXXX
+
+## Indsæt API keys fra messenger på X'ernes plads uden nogen citationstegn.
+## Ret også database informationerne til at passe til DB'en.
+## Til sidst så slet ".template" extension fra navnet på denne fil så den bare hedder ".env"
