--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mssql": "^9.1.1",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1",
     "passport": "^0.6.0",
