--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -27,6 +29,7 @@
   "description": "",
   "devDependencies": {
     "dotenv": "^16.0.3",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   }
 }
